Context, Auth funcs, React-Router-Dom and some style.

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="The Riedel Communications ltd Formula 1 p10 game™. ©"
+      content="The Riedel Communications Ltd Formula 1 p10 game™. ©"
     />
     <title>P10 Game</title>
   </head>
