--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="https://www.riedel.net/fileadmin/Resources/public/Images/Layout/Riedel-R-white-on-red-64px.ico" type="image/vnd.microsoft.icon">
+    <link rel="icon" type="image/png" href="./assets/images/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
