--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="./assets/images/favicon.png">
+    <link rel="icon" type="image/png" href="https://p10-game.s3.eu-west-2.amazonaws.com/assets/favicon.png">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     <meta name="theme-color" content="#000000" />
     <meta
