--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="The Riedel Communications Ltd Formula 1 p10 game™. ©"
+      content="The Riedel Communications Ltd p10 game™. ©"
     />
-    <title>P10 Game</title>
+    <title>P10</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
